2010-04-09       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs/configure.in:  corrected dates and added
	  test to detect presence of libpth.
	* gm2/gm2-libs/configure.in:  corrected test.
	* gm2/gm2-libs/configure:  rebuilt configure.
	* gm2/configure.in:  corrected release number.
	* gm2/configure:  rebuilt configure.

2010-04-08       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Quads.mod:  doIndrX (New Procedure).
	  Use doIndrX instead of GenQuad(IndrXOp..) to force conversion
	  of operands as they are dereferenced.  Fixes a bug reported
	  by Scott Iverson.
	  http://lists.gnu.org/archive/html/gm2/2010-04/msg00007.html

2010-04-07       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  added GeneralUserExceptions.mod and
	  Processes.mod.
	* gm2/gm2.texi:  corrected startup filename.
	* gm2/gm2-compiler/M2Quads.mod:  call SkipType when checking
	  procedure parameters (CheckProcTypeAndProcedure).
	* gm2/gm2-libs/Assertion.def:  added space.
	* gm2/gm2-libs/Assertion.mod:  corrected copyright notice
	  and altered halt message.
	* gm2/gm2-libs/RTExceptions.def:  SetExceptionSource,
	  GetExceptionSource (New Procedures).
	* gm2/gm2-libs/RTExceptions.mod:  implement SetExceptionSource
	  and GetExceptionSource.
	* gm2/gm2-libs/SYSTEM.mod:  removed commented out redundant
	  comment __INLINE__.
	* gm2/gm2-libs-iso/COROUTINES.mod:  TRANSFER and initMain
	  must save and restore the ExceptionBlock, ExceptionState
	  and ExceptionSource.
	* gm2/gm2-libs-iso/EXCEPTIONS.mod:  use RTExceptions to retrieve
	  the ExceptionSource associated with the current COROUTINE to
	  ensure that the exception mechanism is COROUTINE safe.
	* gm2/gm2-libs-iso/Processes.mod:  first full implementation.
	* gm2/ulm-lib-gm2/std/RTExceptions.mod:  SetExceptionSource
	  GetExceptionSource (New procedures).
	* gm2/www/index.ms:  removed URLs.
	* gm2/examples/callingC/Makefile:  removed file.
	* gm2/TODO:  removed Processes.mod and GeneralUserExceptions.mod
	  from the list.