@@ -29,7 +29,11 @@ AC_CONFIG_HEADER(gm2-libs-host.h:gm2-libs-host.h.in)
 AC_HEADER_STDC
 AC_HEADER_TIME
 AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS(limits.h stddef.h string.h strings.h stdlib.h time.h \
+AC_CHECK_HEADER([math.h],
+	       [AC_DEFINE([HAVE_MATH_H], [1], [have math.h])])
+
+AC_CHECK_HEADERS(limits.h stddef.h string.h strings.h stdlib.h \
+                 time.h \
 		 fcntl.h unistd.h sys/file.h sys/time.h sys/mman.h \
 		 sys/resource.h sys/param.h sys/times.h sys/stat.h \
                  sys/wait.h sys/ioctl.h errno.h sys/errno.h \
@@ -111,10 +115,13 @@ fi
 
 
 dnl
-dnl  now check for libpth-dev
+dnl  now check for presence of libraries and functions within libraries.
 dnl
 
 AC_CHECK_LIB(pth, pth_uctx_create, [],
              [echo "** warning **: you will need to install libpth-dev if you wish to build coroutine based applications"])
+AC_CHECK_LIB(m, exp10, [AC_DEFINE([HAVE_EXP10],[1],[Define to 1 if your system has 'exp10'.])])
+AC_CHECK_LIB(m, exp10f, [AC_DEFINE([HAVE_EXP10F],[1],[Define to 1 if your system has 'exp10f'.])])
+AC_CHECK_LIB(m, exp10l, [AC_DEFINE([HAVE_EXP10L],[1],[Define to 1 if your system has 'exp10l'.])])
 
 AC_OUTPUT
