@@ -108,6 +108,9 @@
 /* Define to 1 if you have the <limits.h> header file. */
 #undef HAVE_LIMITS_H
 
+/* Define to 1 if you have the <math.h> header file. */
+#undef HAVE_MATH_H
+
 /* Define to 1 if you have the `link' function. */
 #undef HAVE_LINK
 
@@ -304,3 +307,12 @@
 
 /* Define to 1 if you have the <netdb.h> header file. */
 #undef HAVE_NETDB_H
+
+/* Define to 1 if your system has exp10. */
+#undef HAVE_EXP10
+
+/* Define to 1 if your system has exp10f. */
+#undef HAVE_EXP10F
+
+/* Define to 1 if your system has exp10l. */
+#undef HAVE_EXP10L
